--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"gulp": "^4.0.0",
 		"gulp-postcss": "^8.0.0",
 		"gulp-sourcemaps": "^2.6.4",
+		"gulp-uglify": "^3.0.1",
 		"gulp-zip": "^4.2.0",
 		"postcss-custom-properties": "^8.0.9",
 		"postcss-import": "^12.0.0",
